# karmacoin

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  coding_guidelines.md  config_template.yaml  design_notes.md  karmachain_backup_Wed_Apr_19_16_59_42_2023.json  save_file.csv
.github/workflows/: rust.yml
crates/base/: Cargo.toml  build.rs  lib.rs
crates/base/proto/: build_dart_protos.sh
crates/base/proto/dart/karma_coin/core_types/: verifier.pb.dart  verifier.pbjson.dart
crates/base/proto/karma_coin/: README.md  client.proto
crates/base/proto/karma_coin/core_types/: api.proto  auth.proto  blockchain.proto  types.proto  verifier.proto
crates/base/src/: TraitName.rs  block.rs  block_event.rs  blockchain_config_service.rs  blockchain_stats.rs  char_trait.rs  client_config_service.rs  genesis_config_service.rs  genesis_data.rs  hasher.rs  hex_utils.rs  karma_coin_format.rs  key_pair.rs  lib.rs  logging_service.rs  new_user_tx.rs  payment_transaction.rs  payment_transaction_v1.rs  payment_tx.rs  register_number_request.rs  register_number_response.rs  server_config_service.rs  signed_trait.rs  signed_transaction.rs  signed_tx.rs  signer_trait.rs  sms_invite_data.rs  test_helpers.rs  tests_helpers.rs  trait_name.rs  transaction_event.rs  tx_body.rs  update_user_transaction.rs  update_user_tx.rs  user.rs  user_verification_data.rs  user_verification_data_ex.rs  verify_number_request.rs  verify_number_response.rs
crates/base/src/karma_coin/: karma_coin_api.rs  karma_coin_auth.rs  karma_coin_blockchain.rs  karma_coin_client.rs  karma_coin_core_types.rs  karma_coin_verifier.rs  mod.rs
crates/client/: Cargo.toml
crates/client-app/: Cargo.toml
crates/client-app/src/: lib.rs  main.rs
crates/client/src/: client.rs  lib.rs
crates/client/src/services/: README.MD  grpc_service.rs  mod.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: aead_cypher.rs  aes_cypher.rs  hasher.rs  hmacer.rs  kdfer.rs  lib.rs  utils.rs  x2dh.rs
crates/db/: Cargo.toml
crates/db/src/: db_service.rs  db_utils.rs  lib.rs  types.rs
crates/db/tests/: rw_test.rs  ttl_test.rs
crates/scripts/: run_devmode.sh
crates/server/: Cargo.toml  verifier_config_template.yaml
crates/server-app/: Cargo.toml
crates/server-app/src/: lib.rs  main.rs
crates/server/src/: lib.rs
crates/server/src/services/: api_service.rs  db_config_service.rs  genesis_config.rs  mod.rs  push_notes.rs  referral_push_note.rs  register_number.rs  server_service.rs  tx_push_note.rs  verifier_service.rs  verify_number.rs
crates/server/src/services/api/: api_service.rs  get_char_traits.rs  get_user_by_account_id.rs  get_user_by_nick.rs  get_user_by_number.rs  mod.rs  user_by_nick.rs
crates/server/src/services/blockchain/: backup_chain_service.rs  backup_chain_task.rs  block_creator.rs  block_event.rs  block_event_emitter.rs  blockchain_service.rs  blocks_store.rs  create_block.rs  delete_user_tx_processor.rs  get_all_users.rs  get_contacts.rs  get_genesis_data.rs  get_head_height.rs  get_leader_board.rs  get_user_by_account_id.rs  get_user_by_nick.rs  get_user_by_number.rs  get_user_by_user_name.rs  karma_rewards_service.rs  leader_board_upsert.rs  mem_pool_service.rs  mod.rs  new_user_tx_processor.rs  new_user_tx_processor_v1.rs  payment_tx_processor.rs  payment_tx_processor_v1.rs  set_community_admin.rs  stats.rs  tokenomics.rs  tx_event.rs  tx_event_emitter.rs  txs_processor.rs  txs_store.rs  update_tx_processor.rs  update_tx_processor_v1.rs
crates/server/src/services/verifier/: mod.rs  register_number.rs  send_verification_code.rs  sms_invites_sender.rs  verifier_service.rs  verify_number.rs  verify_number_ex.rs
crates/server/tests/: README.md  basic_test.rs  blockchain_data.rs  genesis_config.rs  helpers.rs  new_user.rs  new_user_existing_name.rs  new_user_existing_number.rs  new_user_happy_flow.rs  new_user_no_auth.rs  new_user_referral.rs  new_user_test.rs  new_user_tests.rs  payment_no_funds_tx.rs  payment_tx.rs  payment_tx_test.rs  register_number.rs  register_number_bad_sig.rs  register_number_no_code.rs  register_number_tests.rs  register_number_wrong_code.rs  signup_referral.rs  signup_referral_test.rs  signup_test.rs  verifier.rs  verifier_tests.rs
crates/server/tests/common/: mod.rs
crates/xactor/: Cargo.toml
crates/xactor-derive/: Cargo.toml
crates/xactor-playground/: Cargo.toml
crates/xactor-playground/src/: basic.rs  broker.rs  lib.rs  main.rs  ping.rs  service.rs  stream.rs  subscriber.rs  supervise.rs
crates/xactor/src/: addr.rs  context.rs
