[package]
name = "base"
version = "0.1.0"
authors = ["ae <a@karmaco.in>"]
edition = "2018"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
prost-serde = "0.2.0"
prost-derive = "0.8"
tonic-build = { version = "=0.5.1", features = ["transport", "rustfmt", "prost", "compression"] }

[dependencies.tokio]
version = "1.8.1"
features = ["full"]

[dependencies]
tonic = { version = "=0.5.0", features = ["default", "compression"] }
tonic-web = "0.1"
prost = "0.8"
prost-types = "0.8"
prost-helper = "0.5"
tokio-stream = "0.1.7"
xactor = { path = "../xactor", version = "0.7.9", features = ["runtime-tokio"], default-features = false}
xactor-derive = { path = "../xactor-derive" }

serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_derive = "1.0"
serde_json = "1.0"

bytes = { version = "1", features = ["serde"] }
anyhow = "1.0"
byteorder = "*"
datetime = "*"
chrono = "*"
async-trait = "0.1.41"
futures = "0.3.5"
hex = "0.4.3"
custom_error = "1.8.0"
log = "0.4.8"
env_logger = "*"
config = "0.13.1"
orion = "0"

[dependencies.rand_core]
version = "0.5"
default-features = false

[dependencies.rand]
version = "0.6"
features = ["i128_support"]

[dependencies.fnv]
version = "1.0"

[dependencies.x25519-dalek]
version = "1"
default-features = false
features = ["std", "u64_backend", "serde"]

[dependencies.ed25519-dalek]
version = "1"
features = ["serde"]

