[package]
name = "base"
version = "0.1.0"
authors = ["ae <a@karmaco.in>"]
edition = "2021"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
prost-serde = "0.3.0"
prost-derive = "0.11.6"
tonic-build = { version = "=0.8.4", features = ["prost", "cleanup-markdown"] }

[dependencies.tokio]
version = "1.23.1"
features = ["full"]

[dependencies]
tonic = { version = "=0.8.3", features = ["default"] }
tonic-web = "0.5.0"

prost = "0.11.6"
prost-types = "0.11.6"
prost-helper = "0.7.0"
tokio-stream = "0.1.7"
xactor = { path = "../xactor", version = "0.7.9", features = ["runtime-tokio"], default-features = false}
xactor-derive = { path = "../xactor-derive" }
map-macro = "0.2.5"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.10.6"

bytes = { version = "1", features = ["serde"] }
anyhow = "1.0"
byteorder = "*"
datetime = "*"
chrono = "*"
async-trait = "0.1.41"
futures = "0.3.5"
hex = "0.4.3"
custom_error = "1.8.0"
log = "0.4.8"
env_logger = "*"
config = "0.13.1"

[dependencies.rand_core]
version = "0.5"
default-features = false

[dependencies.rand]
version = "0.6"
features = ["i128_support"]

[dependencies.fnv]
version = "1.0"

[dependencies.x25519-dalek]
version = "1"
default-features = false
features = ["std", "u64_backend", "serde"]

[dependencies.ed25519-dalek]
version = "1"
features = ["serde"]

