[package]
name = "client"
description = "a simple kc client"
version = "0.1.0"
authors = ["subnetter <subnetter@pm.me>"]
edition = "2018"

[dependencies.tokio]
version = "1.8.1"
features = ["full"]

[dependencies]
base = { path = "../base" }
db = { path = "../db" }
xactor = { path = "../xactor", version = "0.7.9", features = ["runtime-tokio"], default-features = false}
xactor-derive = { path = "../xactor-derive" }

rocksdb = "0.19.0"

serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
tonic = { version = "=0.5.0", features = ["default", "compression"] }
prost = "0.8.0"

bytes = { version = "1", features = ["serde"] }
bincode = "1.3.3"

log = "*"
env_logger = "*"
anyhow = "1"
arrayref = "0.3.6"
byteorder = "*"
datetime = "*"
chrono = "*"
sha2 = "0.9.1"

async-trait = "0.1.41"
futures = "0.3.5"

[dependencies.rand_core]
version = "0.5"
default-features = false

[dependencies.rand]
version = "0.6"
features = ["i128_support"]

[dependencies.x25519-dalek]
version = "1"
default-features = false
features = ["std", "u64_backend", "serde"]

[dependencies.ed25519-dalek]
version = "1"
features = ["serde"]
