[package]
name = "crypto"
version = "0.1.0"
description = "Karmacoin crypto library"
authors = ["ae <a@karmaco.in>"]
edition = "2021"

[dependencies]
base = { path = "../base" }
getrandom = "0.2.8"
curve25519-dalek = "3"
sha2 = "0.10.6"

serde = { version = "1.0.125", features = ["derive"] }
serde_bytes = "0.11.5"
bytes = { version = "1", features = ["serde"] }
bincode = "1.3.3"

orion = "0.17.3"

bytebuffer = "2.1.0"
aes = "0.7.4"
block-modes = "0.8.1"
hex = "0.4.3"
log = "*"
anyhow = "1.0"

[dependencies.rand_core]
version = "0.5"
default-features = false

[dependencies.rand]
version = "0.6"
features = ["i128_support"]

[dependencies.x25519-dalek]
version = "1"
default-features = false
features = ["std", "u64_backend", "serde"]

[dependencies.ed25519-dalek]
version = "1"
features = ["serde"]