[package]
name = "db"
version = "0.1.0"
authors = ["0xgfgx <subnetter@pm.me>"]
edition = "2018"

[dependencies.tokio]
version = "1.8.1"
features = ["full"]

[dependencies]
base = { path = "../base" }
xactor = { path = "../xactor", version = "0.7.9", features = ["runtime-tokio"], default-features = false}
xactor-derive = { path = "../xactor-derive" }

serde = { version = "1.0.125", features = ["derive"] }
serde_bytes = "0.11.5"
bytes = { version = "1", features = ["serde"] }
bincode = "1.3.3"
backtrace = "0.3.61"

anyhow = "1.0"
rocksdb = "0.18.0"
log = "*"
datetime = "*"
byteorder = "*"
env_logger = "*"
async-trait = "0.1.41"
futures = "0.3.5"

