[package]
name = "db"
version = "0.1.0"
authors = ["ae <a@karmaco.in>"]
edition = "2021"

[dependencies.tokio]
version = "1.23.1"
features = ["full"]

[dependencies]
base = { path = "../base" }
xactor = { path = "../xactor", version = "0.7.9", features = ["runtime-tokio"], default-features = false}
xactor-derive = { path = "../xactor-derive" }

serde = { version = "1.0.125", features = ["derive"] }
serde_bytes = "0.11.5"
bytes = { version = "1", features = ["serde"] }
bincode = "1.3.3"
backtrace = "0.3.61"

anyhow = "1.0"
rocksdb = "0.20.1"
log = "*"
datetime = "*"
byteorder = "*"
env_logger = "*"
async-trait = "0.1.41"
futures = "0.3.5"

