[package]
name = "server"
version = "0.1.0"
authors = ["ae <a@karmaco.in>"]
edition = "2021"

[dependencies.tokio]
version = "1.23.1"
features = ["full"]

[dependencies]
tokio-stream = "0.1.7"
tokio_schedule = "0.3.0"

base = { path = "../base" }

db = { path = "../db" }
xactor = { path = "../xactor", version = "0.7.9", features = ["runtime-tokio"], default-features = false}
xactor-derive = { path = "../xactor-derive" }

rocksdb = "0.20.1"

serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
bytes = { version = "1", features = ["serde"] }
bincode = "1.3.3"

tonic = { version = "=0.8.3", features = ["default", "transport", "tls"] }
tonic-web = "0.5.0"
tonic-health = "0.8.0"
tonic-reflection = "0.6.0"
tower-http = { version = "0.3.5", features = ["cors"] }
http = "0.2.8"
prost = "0.11.6"
prost-types = "0.11.6"
reqwest = "0.11.14"

config = "0.13.1"
uint = "0.9.0"
log = "*"
env_logger = "*"
anyhow = "1"
arrayref = "0.3.6"
byteorder = "*"
chrono = "*"
sha2 = "0.10.6"
async-trait = "0.1.41"
futures = "0.3.5"
rand_chacha = "0.3.1"

[dependencies.rand_core]
version = "0.6.4"
default-features = false

[dependencies.rand]
version = "0.8.5"

[dependencies.x25519-dalek]
version = "1"
default-features = false
features = ["std", "u64_backend", "serde"]

[dependencies.ed25519-dalek]
version = "1"
features = ["serde"]

[dev-dependencies]
nix = "0.26.2"
