[package]
name = "xactor-playground"
version = "0.1.0"
authors = ["ae <a@karmaco.in>"]
edition = "2021"
publish = false

[dependencies.tokio]
version = "1.23.1"
features = ["full"]

[dependencies]
xactor = { path = "../xactor", version = "0.7.9", features = ["runtime-tokio"], default-features = false}
xactor-derive = { path = "../xactor-derive" }

async-trait = "0.1.41"
futures = "0.3.5"
