[package]
name = "xactor"
version = "0.7.9"
authors = ["sunli <scott_s829@163.com>"]
description = "Xactor is a rust actors framework based on async-std"
edition = "2018"
publish = true
license = "MIT"
documentation = "https://docs.rs/xactor/"
homepage = "https://github.com/sunli829/xactor"
repository = "https://github.com/sunli829/xactor"
keywords = ["actor", "futures", "async", "xactor", "async-std"]
categories = ["network-programming", "asynchronous"]
readme = "README.md"

[dependencies]
futures = "0.3"
async-trait = "0.1"
async-std = { version = "1", features = ["attributes"], optional = true }
tokio = { version = "1.8.1", features = ["full"], optional = true }
once_cell = "1.4"
anyhow = "1.0"

xactor-derive = { path = "../xactor-derive", version = "0.7.1" }

fnv = "1.0"
slab = "0.4"

[features]
runtime-tokio = ["tokio"]

